--- a/packages/medusa-plugin-strapi-ts/package.json
+++ b/packages/medusa-plugin-strapi-ts/package.json
@@ -27,7 +27,7 @@
     "test": "jest --coverage --runInBand --setupFiles=dotenv/config"
   },
   "devDependencies": {
-    "@medusajs/medusa": "^1.x",
+    "@medusajs/medusa": "^1.8.2",
     "@strapi/plugin-users-permissions": "^4.6.1",
     "@types/express": "^4.17.14",
     "@types/jest": "^27.4.0",
@@ -49,7 +49,6 @@
     "eslint-plugin-file-progress": "^1.3.0",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^27.5.0",
-    "medusa-extender": "^1.7.7",
     "medusa-interfaces": "1.x",
     "mongoose": "^6.2.0",
     "prettier": "^2.7.1",
@@ -61,10 +60,11 @@
     "typescript": "^4.5.5"
   },
   "peerDependencies": {
-    "@medusajs/medusa": "^1.7.11",
+    "@medusajs/medusa": "^1.8.2",
     "@strapi/plugin-users-permissions": "^4.6.1",
     "axios": "^0.27.2",
-    "medusa-interfaces": "latest"
+    "medusa-interfaces": "latest",
+    "typeorm": "^0.3.14"
   },
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -76,7 +76,6 @@
     "generate-password": "^1.7.0",
     "jsonwebtoken": "^8.5.1",
     "medusa-core-utils": "^1.1.37",
-    "medusa-test-utils": "^1.1.37",
-    "typeorm": "^0.2.41"
+    "medusa-test-utils": "^1.1.37"
   }
 }
