--- a/packages/medusa-strapi/package.json
+++ b/packages/medusa-strapi/package.json
@@ -9,7 +9,7 @@
     "url": "https://github.com/SGFGOV/medusa-strapi-repo/"
   },
   "scripts": {
-    "integration-test":"NODE_ENV=test strapi develop",
+    "integration-test": "NODE_ENV=test strapi develop",
     "develop": "strapi develop",
     "start": "strapi start",
     "build": "strapi build",
@@ -28,6 +28,7 @@
     "@medusajs/medusa": "npm:@sgftech/medusa",
     "@notum-cz/strapi-plugin-content-versioning": "^0.4.7",
     "@offset-dev/strapi-calendar": "^0.0.9",
+    "@sgftech/strapi-plugin-multi-country-select": "^1.0.1",
     "@strapi/design-system": "^1.4.1",
     "@strapi/icons": "^1.4.1",
     "@strapi/logger": "4.9.2",
@@ -68,8 +69,7 @@
     "strapi-plugin-multi-select": "^1.1.0",
     "strapi-plugin-sitemap": "^2.0.8",
     "strapi-plugin-sso-medusa": "^0.1.12",
-    "style-loader": "^3.3.1",
-    "yarn": "^1.22.19"
+    "style-loader": "^3.3.1"
   },
   "author": {
     "name": "A Strapi developer"
